# fileus

./: .gitignore  DEVELOPMENT.md  LICENSE  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  verify.sh
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen-certs.rs
src-tauri/src/: lib.rs  main.rs  shared.rs  utilities.rs
src-tauri/src/crypto/: certificates.rs  common.rs  mod.rs
src-tauri/src/http_server/: api_error.rs  architecture.md  files.rs  handler.rs  mod.rs  responses.rs  server.rs  session.rs  system.rs  upload.rs
src/components/: Card.tsx  Window.tsx
src/styles/: base.css  components.css  themes.css
src/web-frontend/: index.html  package.json
src/web-frontend/server/: index.js
src/web-frontend/src/: App.tsx  api.ts  chunkStorage.ts  crypto.ts
src/web-frontend/src/apps/: Desktop.tsx  FileBrowser.tsx  ImageViewer.tsx
web-frontend/: package-lock.json  package.json  test-window.mjs  tsconfig.json  vite.config.js
web-frontend/scripts/: compress-dist.js
web-frontend/server/: index.js
web-frontend/src/: App.tsx  KeyInput.tsx  api.ts  crypto.ts  desktopStore.ts  notificationStore.ts  settings.ts  styles.css
web-frontend/src/apps/: Desktop.tsx  FileBrowser.css  FileBrowser.tsx  ImageViewer.css  ImageViewer.tsx  ProcessManager.css  ProcessManager.tsx  Settings.css  Settings.tsx  Terminal.css  Terminal.tsx  TextEditor.css  TextEditor.tsx  editorCore.ts
web-frontend/src/components/: Dialogs.css  Dialogs.tsx  Window.tsx
(+1 files in other folders)
